# sf-ai-vibe-code-hackathon

./: .env.example  .gitignore  DEMO.md  DEV_ROADMAP.md  README.md  SETUP.md  SIMPLIFICATION_SUMMARY.md  architecture_diagrams.md  demo_aha_workflow.py  run_backend.sh  run_complete_aha_demo.py  run_frontend.sh  test_zypher_with_langsmith.py
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: incidents.py  webhooks.py
backend/app/core/: config.py
backend/app/models/: incident.py
backend/app/services/: diagnosis_service.py  github_service.py  langsmith_service.py
backend/app/storage/: memory_store.py
backend/demo/: inject_failure.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: IncidentCard.jsx  Layout.jsx
frontend/src/components/demo/: DemoControls.jsx  DemoNarrative.jsx
frontend/src/components/system-status/: SystemStatus.jsx
frontend/src/pages/: DashboardPage.jsx
frontend/src/services/: api.js
target_system/: deno.json  pyproject.toml  run_research_team.py  setup_zypher.sh  zypher_research_team.ts
