[tool.poetry]
name = "aha-backend"
version = "0.1.0"
description = "Autonomous AI Healing Agent Backend"
authors = ["Gemini <gemini@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
langsmith = "^0.0.69"
openai = "^1.3.0"
anthropic = "^0.7.0"
PyGithub = "^2.1.1"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
