[tool.poetry]
name = "aha-backend"
version = "0.1.0"
description = "Autonomous AI Healing Agent Backend"
authors = ["AHA Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
langsmith = "^0.0.69"
anthropic = "^0.7.0"
pygithub = "^1.59.1"
httpx = "^0.25.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
